# life

./: .gitignore  CMakeLists.txt  LICENSE  README.md  life.cpp  life.hpp  life.pro  lifeview.cpp  lifeview.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  toolchain-mingw32.cmake
